tests/baselines/reference/parserFuzz1.errors.txt
==== tests/cases/compiler/parserFuzz1.ts (6 errors) ====
    cla <ss {
            ~
!!! parserFuzz1.ts(1,9): error TS1005: ';' expected.
    ~~~
!!! parserFuzz1.ts(1,1): error TS2095: Cannot find name 'cla'.
         ~~
!!! parserFuzz1.ts(1,6): error TS2095: Cannot find name 'ss'.
      _ static try
        ~~~~~~
!!! parserFuzz1.ts(2,5): error TS1005: ';' expected.
                  
!!! parserFuzz1.ts(2,15): error TS1005: '{' expected.
      ~
!!! parserFuzz1.ts(2,3): error TS2095: Cannot find name '_'.